disks/pc/dos/microsoft/6.00/1200K/README.md
---
layout: page
title: Microsoft MS-DOS 6.00 (1.2M Disks)
permalink: /disks/pc/dos/microsoft/6.00/1200K/
---

Microsoft MS-DOS 6.00 (1.2M Disks)
---

### Directory of MS-DOS 6.00 (1.2M Disk 1)

	 Volume in drive A is DISK      1
	 Volume Serial Number is 1805-1C0E

	Directory of A:\

	IO       SYS     40470 03-10-93   6:00a
	MSDOS    SYS     38138 03-10-93   6:00a
	ANSI     SY_      6260 03-10-93   6:00a
	ATTRIB   EXE     11165 03-10-93   6:00a
	AUTOEXEC BAT        36 03-10-93   6:00a
	CHKDSK   EXE     12907 03-10-93   6:00a
	COMMAND  COM     52925 03-10-93   6:00a
	CONFIG   SYS        13 03-10-93   6:00a
	COUNTRY  SYS     17066 03-10-93   6:00a
	DBLSPACE BIN     51214 03-10-93   6:00a
	DEBUG    EXE     15715 03-10-93   6:00a
	DOSSETUP INI      3735 03-10-93   6:00a
	EDIT     COM       413 03-10-93   6:00a
	EXPAND   EXE     16129 03-10-93   6:00a
	FDISK    EXE     29333 03-10-93   6:00a
	FORMAT   COM     22717 03-10-93   6:00a
	KEYB     COM     14983 03-10-93   6:00a
	KEYBOARD SYS     34694 03-10-93   6:00a
	MORE     COM      2546 03-10-93   6:00a
	MSD      EXE    158470 03-10-93   6:00a
	NETWORKS TXT     20463 03-10-93   6:00a
	NLSFUNC  EXE      7036 03-10-93   6:00a
	PACKING  LST      6929 03-10-93   6:00a
	QBASIC   EXE    194309 03-10-93   6:00a
	README   TXT     44990 03-10-93   6:00a
	RESTORE  EX_     23328 03-10-93   6:00a
	SETUP    EXE     71974 03-10-93   6:00a
	SETUP    MSG      1290 03-10-93   6:00a
	SYS      COM      9379 03-10-93   6:00a
	UNFORMAT COM     12738 03-10-93   6:00a
	       30 file(s)     921365 bytes

	Total files listed:
	       30 file(s)     921365 bytes
	                      284672 bytes free

### Directory of MS-DOS 6.00 (1.2M Disk 2)

	 Volume in drive A is DISK      2
	 Volume Serial Number is 4215-1C0E

	Directory of A:\

	8514     VI_      6421 03-10-93   6:00a
	APPEND   EX_      7462 03-10-93   6:00a
	CGA      GR_      1617 03-10-93   6:00a
	CGA      IN_      2775 03-10-93   6:00a
	CGA      VI_      6131 03-10-93   6:00a
	CHOICE   COM      1754 03-10-93   6:00a
	DEFRAG   EXE     75033 03-10-93   6:00a
	DEFRAG   HL_      4284 03-10-93   6:00a
	DELTREE  EX_      7253 03-10-93   6:00a
	DISKCOMP CO_      6657 03-10-93   6:00a
	DISKCOPY CO_      7382 03-10-93   6:00a
	DISPLAY  SY_      9796 03-10-93   6:00a
	DOSHELP  HL_      2492 03-10-93   6:00a
	DOSKEY   CO_      4217 03-10-93   6:00a
	DOSSHELL CO_      1907 03-10-93   6:00a
	DOSSHELL EX_    142511 03-10-93   6:00a
	DOSSWAP  EX_     13498 03-10-93   6:00a
	DRIVER   SY_      4027 03-10-93   6:00a
	EDIT     HL_     15709 03-10-93   6:00a
	EGA      CP_     18186 03-10-93   6:00a
	EGA      GR_      2466 03-10-93   6:00a
	EGA      IN_      2776 03-10-93   6:00a
	EGA      SY_      3684 03-10-93   6:00a
	EGA      VI_      6160 03-10-93   6:00a
	EGAMONO  GR_      2318 03-10-93   6:00a
	FASTHELP EX_      7539 03-10-93   6:00a
	FASTOPEN EX_      7783 03-10-93   6:00a
	FC       EX_     12065 03-10-93   6:00a
	FIND     EX_      4877 03-10-93   6:00a
	GRAPHICS CO_     11327 03-10-93   6:00a
	GRAPHICS PR_      3883 03-10-93   6:00a
	HELP     COM       413 03-10-93   6:00a
	HELP     HL_    263819 03-10-93   6:00a
	HERC     GR_      1636 03-10-93   6:00a
	HERC     VI_      6271 03-10-93   6:00a
	HIMEM    SY_      8497 03-10-93   6:00a
	LABEL    EX_      6176 03-10-93   6:00a
	LOADFIX  CO_       649 03-10-93   6:00a
	MEM      EX_     19147 03-10-93   6:00a
	MODE     CO_     14849 03-10-93   6:00a
	MONO     GR_       296 03-10-93   6:00a
	MONO     IN_      2451 03-10-93   6:00a
	MOVE     EX_     11659 03-10-93   6:00a
	POWER    EX_      5549 03-10-93   6:00a
	PRINT    EX_      9614 03-10-93   6:00a
	QBASIC   HL_    113105 03-10-93   6:00a
	RAMDRIVE SY_      3282 03-10-93   6:00a
	REPLACE  EX_     12800 03-10-93   6:00a
	SETVER   EX_      6635 03-10-93   6:00a
	SHARE    EX_      8116 03-10-93   6:00a
	SMARTDRV EX_     13793 03-10-93   6:00a
	SMARTMON EX_     13747 03-10-93   6:00a
	SMARTMON HL_      7319 03-10-93   6:00a
	SORT     EX_      4355 03-10-93   6:00a
	SUBST    EX_     12710 03-10-93   6:00a
	TREE     CO_      4753 03-10-93   6:00a
	VGA      GR_      3198 03-10-93   6:00a
	VGA      VI_      6355 03-10-93   6:00a
	VGAMONO  GR_      3214 03-10-93   6:00a
	WINA20   38_      2661 03-10-93   6:00a
	XCOPY    EX_     10368 03-10-93   6:00a
	       61 file(s)     981427 bytes

	Total files listed:
	       61 file(s)     981427 bytes
	                      216576 bytes free

### Directory of MS-DOS 6.00 (1.2M Disk 3)

	 Volume in drive A is DISK      3
	 Volume Serial Number is 5427-1C0E

	Directory of A:\

	CHKSTATE SY_     16770 03-10-93   6:00a
	MEMMAKER HL_      5980 03-10-93   6:00a
	MEMMAKER IN_       800 03-10-93   6:00a
	MSBACKDB OVL     63098 03-10-93   6:00a
	MSBACKDR OVL     66906 03-10-93   6:00a
	MSBACKFB OVL     69066 03-10-93   6:00a
	MSBACKFR OVL     72474 03-10-93   6:00a
	MSBACKUP EX_      2487 03-10-93   6:00a
	MSBACKUP HL_    112396 03-10-93   6:00a
	MSBACKUP OVL    133952 03-10-93   6:00a
	MSBCONFG HL_     18549 03-10-93   6:00a
	MSBCONFG OVL     47210 03-10-93   6:00a
	MWBACKF  DL_      6956 03-10-93   6:00a
	MWBACKR  DL_     30277 03-10-93   6:00a
	MWBACKUP EX_    159138 03-10-93   6:00a
	MWBACKUP HL_    141281 03-10-93   6:00a
	MWGRAFIC DL_     18094 03-10-93   6:00a
	MWUNDEL  EX_     65900 03-10-93   6:00a
	MWUNDEL  HL_     17458 03-10-93   6:00a
	UNDELETE EXE     26420 03-10-93   6:00a
	VFINTD   38_      1289 03-10-93   6:00a
	WNTOOLS  GR_      1071 03-10-93   6:00a
	       22 file(s)    1077572 bytes

	Total files listed:
	       22 file(s)    1077572 bytes
	                      131072 bytes free

### Directory of MS-DOS 6.00 (1.2M Disk 4)

	 Volume in drive A is DISK      4
	 Volume Serial Number is 0203-1D0E

	Directory of A:\

	DBLSPACE EX_    170947 03-10-93   6:00a
	DBLSPACE HL_     22203 03-10-93   6:00a
	DBLSPACE IN_      1060 03-10-93   6:00a
	DBLSPACE SYS       339 03-10-93   6:00a
	DBLWIN   HL_      4205 03-10-93   6:00a
	DOSSHELL HL_     48773 03-10-93   6:00a
	EMM386   EX_     48725 03-10-93   6:00a
	INTERLNK EX_     10720 03-10-93   6:00a
	INTERSVR EX_     26343 03-10-93   6:00a
	MEMMAKER EXE    118660 03-10-93   6:00a
	MONOUMB  38_       950 03-10-93   6:00a
	MSAV     EXE    172198 03-10-93   6:00a
	MSAV     HL_     12230 03-10-93   6:00a
	MSAVHELP OV_     17796 03-10-93   6:00a
	MSAVIRUS LS_     11473 03-10-93   6:00a
	MSCDEX   EXE     25377 03-10-93   6:00a
	MSTOOLS  DL_      8376 03-10-93   6:00a
	MWAV     EX_     65629 03-10-93   6:00a
	MWAV     HL_     12070 03-10-93   6:00a
	MWAVABSI DL_     23085 03-10-93   6:00a
	MWAVDLG  DL_     10232 03-10-93   6:00a
	MWAVDOSL DL_     19702 03-10-93   6:00a
	MWAVDRVL DL_      4219 03-10-93   6:00a
	MWAVMGR  DL_      9569 03-10-93   6:00a
	MWAVSCAN DL_     70797 03-10-93   6:00a
	MWAVSOS  DL_      3983 03-10-93   6:00a
	MWAVTSR  EX_      8445 03-10-93   6:00a
	SIZER    EX_      4136 03-10-93   6:00a
	VSAFE    CO_     33046 03-10-93   6:00a
	COUNTRY  IC_      3266 03-10-93   6:00a
	EGA      IC_     22791 03-10-93   6:00a
	KEYBOARD IC_      8243 03-10-93   6:00a
	       32 file(s)     999588 bytes

	Total files listed:
	       32 file(s)     999588 bytes
	                      205824 bytes free
